<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="digitalhouse.android.View.Fragments.FragmentRegister">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/color_white"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/registerDescription"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/color_white">

                <EditText
                    android:id="@+id/registerEditTextUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerUser"
                    android:maxLength="15"
                    android:paddingBottom="15dp"
                    android:textColor="@color/color_white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/color_white">

                <EditText
                    android:id="@+id/registerEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerEmail"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="15dp"
                    android:textColor="@color/color_white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/registerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/color_white">

                <EditText
                    android:id="@+id/registerEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerPassword"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp"
                    android:textColor="@color/color_white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textColorHint="@color/color_white">

                <EditText
                    android:id="@+id/registerEditTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerConfirmPassword"
                    android:inputType="textPassword"
                    android:paddingBottom="15dp"
                    android:textColor="@color/color_white"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/registerButtonSumbit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/registerBtnRegister"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/color_white"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:textSize="18dp"
                android:elevation="5dp"/>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
