<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="digitalhouse.android.View.Fragments.FragmentRegister">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/loginDescription"/>

        <android.support.design.widget.TextInputLayout

            android:id="@+id/loginUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColorHint="@color/color_white">

            <EditText
                android:id="@+id/editTextLoginUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:paddingBottom="15dp"
                android:textColor="@color/color_white"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColorHint="@color/color_white">

            <EditText
                android:id="@+id/editTextLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registerPassword"
                android:inputType="textPassword"
                android:paddingBottom="15dp"
                android:textColor="@color/color_white"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/loginButtonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="Login"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textColor="@color/color_white"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="18dp"
            android:elevation="5dp"
            android:layout_marginBottom="15dp"/>


        <com.twitter.sdk.android.core.identity.TwitterLoginButton
            android:id="@+id/login_button_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="17dp"
            android:paddingTop="18dp"
            android:paddingBottom="15dp"
            android:textColor="@color/color_white"
            android:text="@string/loginRegisterText"/>

    </LinearLayout>

</FrameLayout>
